updating aws ecr to user get-login-password in buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,27 +22,15 @@ phases:
     commands:
       - echo Login in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
+      - $(aws ecr get-login-password --region $AWS_DEFAULT_REGION --no-include-email)
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID |awk -F":" '{print $2}')
   build:
     commands:
       - echo Build started on $(date)
-      - export DOCKER_IMG_TAG=${REGISTRY}/${IMAGE_BASE_NAME}:${GITHUB_TAG}
-      - export DOCKER_IMG_TAG_LATEST=${REGISTRY}/${IMAGE_BASE_NAME}:${GITHUB_BRANCH}.latest
-      - |-
-        if [ "${GITHUB_TAG}" = "" ] ; then
-          export DOCKER_IMG_TAG=${REGISTRY}/${IMAGE_BASE_NAME}:${GITHUB_BRANCH}.${GITHUB_COMMIT}
-          export GITHUB_TAG=${GITHUB_COMMIT}
-        fi
-      - echo "Building docker image with tags ${DOCKER_IMG_TAG} and ${DOCKER_IMG_TAG_LATEST}"
-      - >
-        docker build
-        --build-arg GIT_HASH="${GITHUB_COMMIT}"
-        --build-arg GIT_BRANCH="${GITHUB_BRANCH}"
-        --build-arg VERSION="${GITHUB_TAG}"
-        --build-arg AUTHOR="CI"
-        -t ${DOCKER_IMG_TAG} -t ${DOCKER_IMG_TAG_LATEST} .
+      - echo Building the Docker image...
+      - docker build -t $REGISTRY:latest .
+      - docker tag $REGISTRY:latest $REGISTRY:$IMAGE_TAG
 
   post_build:
     commands:
